feat(java): 88 话补随堂练习 —— 10 道选择题 + 折叠答案,每答一句「举一反三」
正传 + 番外三卷逐话补齐:选择题覆盖本话全部考点,答案折叠在 details 里(先做再对),
每条答案后跟一句「举一反三」把这一个点连回知识面 —— 目标是能讲透,不是能背。

统一练习段与文末连载标记之间的 --- 分隔,消除此前部分话次缺分隔线导致的排版塌陷。